[project]
name = "rakuyukai"
version = "0.1.0"
description = ""
authors = [
    {name = "MURAWAKI Yugo",email = "murawaki@i.kyoto-u.ac.jp"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pywaybackup (>=3.3.1,<4.0.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "python-dateutil (>=2.9.0.post0,<3.0.0)",
    "chardet (>=5.2.0,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
